# func-ai

./: .gitignore  404.html  README.md  bandit.yaml  index.html  mkdocs.yml  pyproject.toml  pytest.ini
.github/workflows/: docs.yaml  python-vuln.yaml  release.yml
docs/: index.md
docs/function-indexing/: overview.md
docs/python-functions/: python-function-calling.md
func_ai/: function_indexer.py  workflow_creator.py
func_ai/ui_demos/: api_qa.py
func_ai/utils/: __init__.py  api_qa_system_prompt.txt  common.py  jinja_template_functions.py  llm_tools.py  openapi_function_parser.py  py_function_parser.py
function-indexing/overview/: index.html
python-functions/python-function-calling/: index.html
search/: search_index.json
tests/: local_inf.py  template.xml  template2.txt  test_decorators.py  test_function_indexer.py  test_function_indexing.py  test_openapi_function_parser.py  test_parser.py  test_template.py
tests/jupyter/: doc-example-testing.ipynb
